--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
         </section>
 
         <h1>RUN BUDDY</h1>
-        <section>
-        <h2>What we do</h2>
-    </section>
-    <section><h2>What You Do</h2></section>
-<section><h2>Meet The Trainers</h2></section>
-<section><h2>Reach Out</h2></section>
+        What We Do What You Do Your Trainers Reach Out
 <footer><h2>❤️ Made with love by Run Buddy</h2></footer>
     </Body>
 </html>
