--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
     <Head>
         <meta charset="UTF-8"/>
         <title>RUN BUDDY</title>
+        <nav></nav>
+        <ul>
+            <li>
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li><a href="#what-you-do">What You Do</a>
+            </li>
+            <li><a href="your-trainers">Your Trainers</a></li>
+            <li><a href="#reach-out">Reach Out</a></li>
+        </ul>
     </Head>
     <Body>
-        <section>    
+        <section>   
         </section>
 
-        <h1>RUN BUDDY</h1>
-        What We Do What You Do Your Trainers Reach Out
+        <h1><a href="/">RUN BUDDY</a></h1>
+
+        <section><h2>What We Do</h2></section>
+        <section><h2>What You Do</h2></section>
+        <section><h2>Your Trainers</h2></section>
+        <section><h2></h2>Reach Out</section>
 <footer><h2>❤️ Made with love by Run Buddy</h2></footer>
     </Body>
-</html>
+</html> 
