--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <!--What We Do section-->
-    <section id="what-we-do">
+    <section id="what-we-do" class=intro>
         <h2>
             What We Do</h2>
         <p>filler</p>
