styled what-you-do section

--- a/index.html
+++ b/index.html
@@ -68,45 +68,39 @@
 
 
     <!--What We Do section-->
-    <section id="what-we-do" class=intro>
-        <h2>
-            What We Do</h2>
+    <section id="what-we-do" class="intro">
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>filler</p>
     </section>
-    <section id="what-you-do">
+    <section id="what-you-do" id="what-you-do" class="steps">
         <!--What You Do Section-->
-        <h2>What You Do</h2>
+        <h2 class="section-title secondary-border">What You Do</h2>
         <div>
             <!-- insert this img element -->
-            <img src="./assets/images/step-1.svg" alt="An image of a man's silloute next to a plus sign."/>
-            <h3>Step 1: Fill Out the Form Above.</h3>
+            <img src="./assets/images/step-1.svg" alt="An image of a man's silloute next to a plus sign." />
+            <h3>Step 1:<span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
-        </div>
-        </div>
-    </section>
-
+            </div>
+  
     <div>
-        <h3>Step 1: Fill Out the Form Above.</h3>
-        <p>You're already here, so why not?</p>
+        <img src="./assets/images/step-2.svg" alt="An image of two speech bubbles slightly overlapping each other." />
+        <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
+        <p>Are you here to build muscle lose weight, or just feel good?</p>
     </div>
 
-    </div>
-<div>
-<img src="./assets/images/step-2.svg" alt="An image of two speech bubbles slightly overlapping each other." />
-    <h3>Step 2: Consult with One of Our Trainers</h3>
-    <p>Are you here to build muscle lose weight, or just feel good?</p>
-    </div>
     <div>
         <img src="./assets/images/step-3.svg" alt="A close up image of a cartoon shoe as a person runs." />
-        <h3>Step3: Get Running.</h3>
+        <h3>Step3: Get Running.</span></h3>
         <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-        </div>
-        <div>
-            <img src="./assets/images/step-4.svg" alt="A cartoon image of a bare-chest muscular man flexing." />
-        <h3>Step 4: See Results.</h3>
     </div>
+
+    <div>
+        <img src="./assets/images/step-4.svg" alt="A cartoon image of a bare-chested muscular man flexing." />
+        <h3>Step 4: See Results.</h3>
     <p>Bi-weekly check ins with your trainer will keep you focused.</p>
+    </div>
     </section>
+    
     <section>
         <h2>Your Trainers</h2>
     </section>
