--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </li>
                 <li><a href="#what-you-do">What You Do</a>
                 </li>
-                <li><a href="your-trainers">Your Trainers</a>
+                <li><a href="#your-trainers">Your Trainers</a>
                 </li>
                 <li><a href="#reach-out">Reach Out</a></li>
 
@@ -77,34 +77,76 @@
         <h2 class="section-title secondary-border">What You Do</h2>
         <div>
             <!-- insert this img element -->
-            <img src="./assets/images/step-1.svg" alt="An image of a man's silloute next to a plus sign." />
+            <img src="./assets/images/step-1.svg" alt="man's silloute next to a plus sign." />
             <h3>Step 1:<span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
-            </div>
-  
-    <div>
-        <img src="./assets/images/step-2.svg" alt="An image of two speech bubbles slightly overlapping each other." />
-        <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
-        <p>Are you here to build muscle lose weight, or just feel good?</p>
-    </div>
+        </div>
 
-    <div>
-        <img src="./assets/images/step-3.svg" alt="A close up image of a cartoon shoe as a person runs." />
-        <h3>Step3: Get Running.</span></h3>
-        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-    </div>
+        <div>
+            <img src="./assets/images/step-2.svg" alt="two speech bubbles slightly overlapping each other." />
+            <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
+            <p>Are you here to build muscle lose weight, or just feel good?</p>
+        </div>
 
-    <div>
-        <img src="./assets/images/step-4.svg" alt="A cartoon image of a bare-chested muscular man flexing." />
-        <h3>Step 4: See Results.</h3>
-    <p>Bi-weekly check ins with your trainer will keep you focused.</p>
-    </div>
+        <div>
+            <img src="./assets/images/step-3.svg" alt="A cartoon shoe as a person runs." />
+            <h3>Step3: Get Running.</span></h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-4.svg" alt="A cartoon of a bare-chested muscular man flexing." />
+            <h3>Step 4: See Results.</h3>
+            <p>Bi-weekly check ins with your trainer will keep you focused.</p>
+        </div>
     </section>
-    
-    <section>
-        <h2>Your Trainers</h2>
+
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet the Trainers</h2>
     </section>
     <h2>Reach Out</h2>
+    <article class="trainer">
+        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+        <div class="trainer-bio text-left">
+            <h3>Arron Stephens</h3>
+            <h4>Speed / Strength</h4>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe
+                culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+            </p>
+        </div>
+    </article>
+
+    <!-- second trainer bio -->
+    <article class="trainer">
+        <div class="trainer-bio text-right">
+            <h3>Joanna Gill</h3>
+            <h4>Endurance</h4>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe
+                culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+            </p>
+        </div>
+        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <!-- third trainer bio -->
+    <article class="trainer">
+        <img src="./assets/images/trainer-3.jpg"
+            alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+        <div class="trainer-bio text-left">
+            <h3>Harry "the Headband" Smith</h3>
+            <h4>Strength</h4>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe
+                culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+            </p>
+        </div>
+    </article>
+
     <footer>
         <h2>❤️ Made with love by Run Buddy</h2>
         <div>
