add flexbox to the hero

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
 
     <!--What We Do section-->
     <section id="what-we-do" class="intro">
+        <div class="flex-row">
         <h2 class="section-title primary-border">What We Do</h2>
         <p>filler</p>
+        </div>
     </section>
     <section id="what-you-do" id="what-you-do" class="steps">
         <!--What You Do Section-->
