--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,9 +25,11 @@
     </nav>
   </header>
   <section class="hero">
-    <h2 class="page-title">
+    <div class="flex-row">
+    <h2 class="section-title primary-border">
       Privacy Policy
     </h2>
+    </div>
   </section>
   <article class="secondary-content">
     <p>
