--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 
 
 <body>
-
-
+<!--Navigation-->
     <header>
-        <h1><a href="/">RUN BUDDY</a></h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
         <nav>
             <ul>
                 <li>
                     <a href="#what-we-do">What We Do</a>
                 </li>
-                <li><a href="#what-you-do">What You Do</a>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
                 </li>
-                <li><a href="#your-trainers">Your Trainers</a>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
                 </li>
-                <li><a href="#reach-out">Reach Out</a></li>
-
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
             </ul>
         </nav>
     </header>
+    <!--end of navigation-->
     <section class="hero">
         <div class="hero-cta">
             <h2>Start Building Habits.</h2>
@@ -40,8 +45,8 @@
                 letterpress High Life.
             </p>
         </div>
-        <div class="hero-form">
 
+        <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
 
@@ -54,10 +59,9 @@
                 <input type="text" placeholder="Email Address" name="email" id="email" class="form-input" />
                 <label for=" phone">Enter a telephone number:</label>
                 <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
-
+                
                 <p>
                     Have you worked out with a trainer before?
-
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
                     <label for="trainer-yes">Yes</label>
                     <input type="radio" name="trainer-confirm" id="trainer-no" />
@@ -65,10 +69,11 @@
                 </p>
 
                 <p>
-                    <label="checkbox">I acknowledge that I am at least 18 years of acknowledge
-                        </label>
+                    <label for="checkbox">
+                        I acknowledge that I am at least 18 years of acknowledge
+                    </label>
 
-                        <input type="checkbox" name="age-confirm" id="checkbox" />
+                    <input type="checkbox" name="age-confirm" id="checkbox"/>
                 </p>
                 <button type="submit">
                     Get running!
@@ -81,70 +86,77 @@
     <!--What We Do section-->
     <section id="what-we-do" class="intro">
         <div class="flex-row">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>filler</p>
-        </div>
-    </section>
-
-
-    <!--What You Do Section-->
-    <section id="what-you-do" id="what-you-do" class="steps">
-        <div class="flex-row">
-            <p>
-                <h2 class="section-title secondary-border">
-                    What You Do
-                </h2>
-                Filler Filler Filler
-        </div>
-
-        <!--End of What you Do-->
-        <div>
-            <div class="step-info">
-                <div class="step-img">
-                    <img src="./assets/images/step-1.svg" alt="man's silloute next to a plus sign." />
-                </div>
-                <div class="step-text">
-                    <h4>Step 1: Fill Out the Form Above.</h4>
-                    <p>You're already here, so why not?</p>
-                </div>
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
             </div>
-            <div class="step-info">
-                <div class="step-img">
-                    <img src="./assets/images/step-2.svg" alt="two speech bubbles slightly overlapping each other." />
-                    <div class="step-text">
-                        <h3>Step 2.</h3>
-                        <h4>Consult with One of Our Trainers</h4>
-                        <p>Are you here to build muscle lose weight, or just feel good?</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="step">
-                <h3>Step 3.</h3>
-                <div class="step-info">
-                    <div class="step-img">
-                        <img src="./assets/images/step-3.svg" alt="A cartoon shoe as a person runs." />
-                    </div>
-                    <div class="step-text">
-                        <h4>Get Running.</h4>
-                        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="step">
-                <h3>Step 4. </h3>
-                <div class="step-info">
-                    <div class="step-img">
-                        <img src="./assets/images/step-4.svg" alt="A cartoon of a bare-chested muscular man flexing." />
-                    </div>
-                    <div class="step-text">
-                        <h4>See Results</h4>
-                        <p>Bi-weekly check ins with your trainer will keep you focused.</p>
-                    </div>
-                </div>
+            <div class="flex-row">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum maiores rem doloremque corporis
+                voluptatem at, assumenda molestiae quo nulla minima, quos non, totam ipsa dolorum laudantium
+                consequuntur enim atque culpa.
+            </p>
             </div>
     </section>
+
+
+    <!-- "what you do" start -->
+<section id="what-you-do" class="steps">
+    <div class="flex-row">
+    <h2 class="section-title secondary-border">
+        What You Do
+    </h2>
+    </div>
+    <div class="step">
+    <h3>Step 1.</h3>
+    <div class="step-info">
+        <div class="step-img">
+        <img src="./assets/images/step-1.svg" alt="A computer monitor with a man's silloute next to a plus sign on screen." />
+        </div>
+        <div class="step-text">
+        <h4>Fill Out The Form Above</h4>
+        <p>You're already here, so why not?</p>
+        </div>
+    </div>
+    </div>
+    <div class="step">
+    <h3>Step 2.</h3>
+    <div class="step-info">
+        <div class="step-img">
+        <img src="./assets/images/step-2.svg" alt="two speech bubbles slightly overlapping each other." />
+        </div>
+        <div class="step-text">
+        <h4>Consult With One Of Our Trainers</h4>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+    </div>
+    </div>
+    <div class="step">
+    <h3>Step 3.</h3>
+    <div class="step-info">
+        <div class="step-img">
+        <img src="./assets/images/step-3.svg" alt="A cartoon shoe as a person runs." />
+        </div>
+        <div class="step-text">
+        <h4>Get Running</h4>
+        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
+    </div>
+    </div>
+    <div class="step">
+    <h3>Step 4.</h3>
+    <div class="step-info">
+        <div class="step-img">
+        <img src="./assets/images/step-4.svg" alt="Acartoon of a bare-chested muscular man flexing." />
+        </div>
+        <div class="step-text">
+        <h4>See Results</h4>
+        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        </div>
+    </div>
+    </div>
+</section>
+<!-- "what you do" end -->
+
 
     <!--Trainers-->
 
@@ -204,7 +216,7 @@
                     </p>
                 </div>
             </article>
-            </div>
+        </div>
     </section>
 
 
@@ -234,25 +246,25 @@
                 </address>
             </div>
 
-                <div class="contact-form">
-                    <h3>Contact Us</h3>
-                    <form>
-                        <label for="contact-name">Your Name</label>
-                        <input type="text" id="contact-name" placeholder="Your Name" />
+            <div class="contact-form">
+                <h3>Contact Us</h3>
+                <form>
+                    <label for="contact-name">Your Name</label>
+                    <input type="text" id="contact-name" placeholder="Your Name" />
 
-                        <label for="contact-message">Message</label>
-                        <textarea id="contact-message" placeholder="Message"></textarea>
+                    <label for="contact-message">Message</label>
+                    <textarea id="contact-message" placeholder="Message"></textarea>
 
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
-
-                
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.3445733122294!2d-97.12707664836093!3d33.23127518074311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864dca9cd3ef3b69%3A0x59906bcb2afa3146!2s1807%20Frame%20St%2C%20Denton%2C%20TX%2076209!5e0!3m2!1sen!2sus!4v1634572610573!5m2!1sen!2sus"
-                    style="border:0" allowfullscreen="" frameborder="0">
-                </iframe>
+                    <button type="submit">Submit</button>
+                </form>
             </div>
+
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3337.3445733122294!2d-97.12707664836093!3d33.23127518074311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864dca9cd3ef3b69%3A0x59906bcb2afa3146!2s1807%20Frame%20St%2C%20Denton%2C%20TX%2076209!5e0!3m2!1sen!2sus!4v1634572610573!5m2!1sen!2sus"
+                style="border:0" allowfullscreen="" frameborder="0">
+            </iframe>
+        </div>
     </section>
     <!--"Reach Out End"-->
 
